subnets.tf
resource "aws_subnet" "public-sub1" { 
    vpc_id = aws_vpc.main.id 
    cidr_block = "10.0.3.0/24"
    availability_zone = "ap-south-1a"
    map_public_ip_on_launch = true
    tags = {
        Name = "public-sub1"
    }
}

resource "aws_subnet" "public-sub2" { 
    vpc_id = aws_vpc.main.id 
    cidr_block = "10.0.4.0/24"
    availability_zone = "ap-south-1b"
    map_public_ip_on_launch = true
    tags = {
        Name = "public-sub2"
    }
}

resource "aws_subnet" "private-sub3" { 
    vpc_id = aws_vpc.main.id 
    cidr_block = "10.0.1.0/24"
    availability_zone = "ap-south-1a"
    tags = {
        Name = "private-sub3"
    }
}


resource "aws_subnet" "private-sub4" { 
    vpc_id = aws_vpc.main.id 
    cidr_block = "10.0.2.0/24"
    availability_zone = "ap-south-1b"
    tags = {
        Name = "private-sub4"
    }
}
